Changed LinkedList to ArrayDeque