@@ -3,7 +3,8 @@ package server.message_util;
 import server.models.Message;
 
 import java.net.Socket;
-import java.util.LinkedList;
+import java.util.ArrayDeque;
+import java.util.Deque;
 
 public class MessageQueue {
    private static MessageQueue ourInstance = new MessageQueue();
@@ -13,7 +14,8 @@ public class MessageQueue {
    }
 
    // All messages awaits in a linked list until they can be send
-   private LinkedList<Message> messages = new LinkedList<>();
+   private Deque<Message> messages = new ArrayDeque<>() {
+   };
 
    private MessageQueue() {
 
@@ -22,13 +24,13 @@ public class MessageQueue {
 
    // Adding new message to queue
    public synchronized void addMessage(Socket receiver, String content) {
-      messages.add(new Message(receiver, content));
+      messages.addLast(new Message(receiver, content));
    }
 
    // Return the oldest awaitng message and removes it from queue
    public synchronized Message shiftMessage() {
       if (messages.size() > 0) {
-         return messages.remove(0);
+         return messages.removeFirst();
       } else {
          return null;
       }
